fix some weird layout issue that seems to only be visible on prod

--- a/app/assets/stylesheets/partials/_promo.css.scss
+++ b/app/assets/stylesheets/partials/_promo.css.scss
@@ -24,7 +24,7 @@
         display: inline-block;
         font-size: 18px;
         vertical-align: top;
-        margin: 2px -5px 0 0;
+        margin: 2px -1px 0 0;
       }
       margin: 27px 0 0;
     }
@@ -106,7 +106,7 @@
         display: inline-block;
         font-size: 32px;
         vertical-align: top;
-        margin: 7px -14px 0 0;
+        margin: 7px -5px 0 0;
       }
       .price {
         margin: 34px 0 0;
